Added color for the error handling

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </div> 
               </div>  
             </form>
-       <div id="error-msg"></div>
+       <div class="text-danger" id="error-msg"></div>
        <div id="result"></div>
   </div>
     <footer><div class="container">&#169;2021-08 Tony Berglund</div></footer>
